# buffy

./: Buffy.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  action.yml  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  new_target.yml
.github/workflows/: ci.yml  docs.yml  release.yml  test-action.yml  test.yml
docs/: book.toml
docs/src/: SUMMARY.md  faq.md  glossary.md  index.md
docs/src/getting-started/: first-steps.md  index.md  installation.md
docs/src/reference/: cli.md  environment-variables.md  index.md  manifest.md  profiles.md
docs/src/reference/profiles/: java.md  javascript.md  kotlin.md  python.md  rust.md  typescript.md
example/.buffy/: pypi.toml
src/: build.rs  cli.rs  command.rs  compiler.rs  config.rs  dependencies.rs  error.rs  gitignore.rs  init.rs  license.rs  main.rs  publish.rs  test.proto
src/compilers/: golang.rs  java.rs  mod.rs  rust.rs
src/compilers/templates/: Cargo.toml.tera  pom.xml.tera
src/configs/: author.rs  error.rs  main.rs  mod.rs
src/configs/profiles/: golang.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/io/: error.rs  mod.rs
src/targets/: context.rs  mod.rs
src/targets/python/: git.rs  helpers.rs  mod.rs  pypi.rs
src/targets/python/templates/: README.md.tera  pyproject.toml.tera
