[package]
name = "buffy"
version = "0.1.1"
authors = ["Julian Siebert <mail@julian-siebert.de>"]
edition = "2024"
description = "A cute Protobuf manager"
readme = "README.md"
license = "Apache-2.0"
keywords = ["grpc", "protobuf", "rpc"]
categories = ["accessibility", "command-line-utilities", "development-tools"]

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "unicode", "wrap_help"] }
console = "0.16.3"
dotenv = "0.15.0"
fs_extra = "1.3.0"
indicatif = "0.18.4"
indoc = "2.0.7"
license = "3.8.0"
log = "0.4.29"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.13.2", features = ["json"] }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
spdx = "0.13.4"
tempfile = "3.27.0"
tera = "1.20.1"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
toml = "1.1.2"
which = "8.0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[package.metadata.deb]
copyright = "2026, Julian Siebert"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/buffy", "/usr/bin/buffy", "755" ],
    ["README.md", "/usr/share/doc/buffy/README.md", "644" ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/buffy", dest = "/usr/bin/buffy" },
    { source = "README.md", dest = "/usr/share/doc/buffy/README.md" }
]
